add hw1 L2 slides

--- a/resources.html
+++ b/resources.html
@@ -95,9 +95,29 @@
 
             <tbody>
               <tr>
-                <td></td>
-                <td>HW 1</td>
-                <td></td>
+                <td>
+                  May 28
+                </td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1fu6OMlmhhMoBc1sbhWZAIAowhiQiZslw/view?usp=sharing"
+                  >
+                    HW 1 (pdf)
+                  </a>
+                  <br />
+                  <a
+                    href="https://drive.google.com/file/d/1ytPzdelEZLmS0WtSX3REwMEDLJ4s0trj/view?usp=sharing"
+                  >
+                    HW 1 (tex)
+                  </a>
+                </td>
+                <td>
+                  <
+                    No starter file for HW 1
+                  >
+                    HW 1 Starter (py)
+                  </a>
+                </td>
               </tr>
             </tbody>
           </table>
@@ -115,9 +135,39 @@
             </thead>
             <tbody>
               <tr>
-                <td>Jul 8</td>
-                <td>Lecture 1</td>
-                <td>Video 1</td>
+                <td>July 8</td>
+                <td>
+                  <a
+                    href = https://drive.google.com/file/d/1kBnPm-8Iim5Q3M9qi2XgRuArWZ010sLZ/view?usp=sharing
+                  >
+                    Lecture 1
+                  </a>
+                </td>
+                <td>
+                  <
+                  No video recording for lecture 1
+                  >
+                    Video 1
+                  </a>
+                </td>
+              </tr>
+
+              <tr>
+                <td>July 10</td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1AFhubyiy_CRc5-kT33oSh9INcQgTYyDA/view?usp=sharing"
+                  >
+                    Lecture 2
+                  </a>
+                </td>
+                <td>
+                  <a
+                    href="place"
+                  >
+                    Video 2
+                  </a>
+                </td>
               </tr>
             </tbody>
           </table>
