--- a/resources.html
+++ b/resources.html
@@ -112,10 +112,8 @@
                   </a>
                 </td>
                 <td>
-                  <
                     No starter file for HW 1
-                  >
-                    HW 1 Starter (py)
+
                   </a>
                 </td>
               </tr>
@@ -144,10 +142,9 @@
                   </a>
                 </td>
                 <td>
-                  <
+                  
                   No video recording for lecture 1
-                  >
-                    Video 1
+                  
                   </a>
                 </td>
               </tr>
@@ -163,7 +160,7 @@
                 </td>
                 <td>
                   <a
-                    href="place"
+                    href="https://drive.google.com/file/d/1cDoNCAhwZv5g0XRYYeH9TKWlzyQqpngH/view?usp=sharing"
                   >
                     Video 2
                   </a>
