add L3 notes and video

--- a/resources.html
+++ b/resources.html
@@ -166,6 +166,29 @@
                   </a>
                 </td>
               </tr>
+
+              <tr>
+                <td>July 15</td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1dXI22ROskuwVplMbSdIIV7jijKgD8aYd/view?usp=sharing"
+                  >
+                    Lecture 2
+                  </a>
+                </td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1h0_8dqaNen5CQ79kWA1Kv9CuQr-WJNWo/view?usp=sharing"
+                  >
+                    Video 2
+                  </a>
+                </td>
+              </tr>
+
+
+
+
+
             </tbody>
           </table>
         </section>
