--- a/resources.html
+++ b/resources.html
@@ -185,6 +185,24 @@
                 </td>
               </tr>
 
+              <tr>
+                <td>July 17</td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1dx37N4Mfz34yfT02r7Y02_xANliPhQjI/view?usp=sharing"
+                  >
+                    Lecture 4
+                  </a>
+                </td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1rdvvZxI7jF1pg021wKEINLAjlNBvRlqz/view?usp=sharing"
+                  >
+                    Video 4
+                  </a>
+                </td>
+              </tr>
+
 
 
 
