add L1 ipad notes

--- a/resources.html
+++ b/resources.html
@@ -136,10 +136,15 @@
                 <td>July 8</td>
                 <td>
                   <a
-                    href = https://drive.google.com/file/d/1kBnPm-8Iim5Q3M9qi2XgRuArWZ010sLZ/view?usp=sharing
+                    href = "https://drive.google.com/file/d/1kBnPm-8Iim5Q3M9qi2XgRuArWZ010sLZ/view?usp=sharing"
                   >
                     Lecture 1
                   </a>
+                  <a
+                  href = "https://drive.google.com/file/d/1G3SDL4K9biiYSDsuix8r5vI6E6eVOlS1/view?usp=sharing"
+                >
+                  Lecture 1 iPad Notes
+                </a>
                 </td>
                 <td>
                   
