--- a/resources.html
+++ b/resources.html
@@ -96,7 +96,7 @@
             <tbody>
               <tr>
                 <td>
-                  May 28
+                  July
                 </td>
                 <td>
                   <a
@@ -117,6 +117,25 @@
                   </a>
                 </td>
               </tr>
+
+              <tr>
+                <td>
+                  July 22
+                </td>
+                <td>
+                  <a
+                    href="https://github.com/athaker/econ_136/blob/master/code/2020_gu_lecture.ipynb"
+                  >
+                    HW 1 (Jupyter notebook)
+                  </a>
+                  <br />
+          
+                  </a>
+                </td>
+              </tr>
+
+
+
             </tbody>
           </table>
         </section>
@@ -207,6 +226,24 @@
                     href="https://drive.google.com/file/d/1rdvvZxI7jF1pg021wKEINLAjlNBvRlqz/view?usp=sharing"
                   >
                     Video 4
+                  </a>
+                </td>
+              </tr>
+
+              <tr>
+                <td>July 22</td>
+                <td>
+                  <a
+                    href="https://github.com/athaker/econ_136/blob/master/intro_quant_2020.pdf"
+                  >
+                    Lecture 5
+                  </a>
+                </td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1DJA3GSmUG-RKU-HYto_7trv8BsowdSZ1/view?usp=sharing"
+                  >
+                    Video 5
                   </a>
                 </td>
               </tr>
