--- a/resources.html
+++ b/resources.html
@@ -248,6 +248,24 @@
                 </td>
               </tr>
 
+              <tr>
+                <td>July 24</td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1ydGRWYgiE7bXyXccYz2nvvmrIuodQWy7/view?usp=sharing"
+                  >
+                    Lecture 6
+                  </a>
+                </td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1Tjy76ixLYByDX_kAotED2cSfQEjoRJXQ/view?usp=sharing"
+                  >
+                    Video 6
+                  </a>
+                </td>
+              </tr>
+
 
 
 
