--- a/resources.html
+++ b/resources.html
@@ -266,6 +266,65 @@
                 </td>
               </tr>
 
+              <tr>
+                <td>July 29</td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1jEz4vfzr4CnIlKxY-6hSUuWINbkK0h79/view?usp=sharing"
+                  >
+                    Lecture 7
+                  </a>
+                </td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/13AoUYdfpQLz63yEyQ3RYgY1uDddk0sZ8/view?usp=sharing"
+                  >
+                    Video 7
+                  </a>
+                </td>
+              </tr>
+
+              
+
+
+
+
+              <tr>
+                <td>July 24</td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1I7lDEbkZRr145Ayxt9FBUyLE3s-4CcAs/view?usp=sharing"
+                  >
+                    Lecture 8
+                  </a>
+                </td>
+                <td>
+
+                    No video for Lecture 8
+                  </a>
+                </td>
+              </tr>
+
+
+
+
+              <tr>
+                <td>July 24</td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/197CmgjrncFW--weXxSd8FcO0Rq5yeD39/view?usp=sharing"
+                  >
+                    Lecture 9
+                  </a>
+                </td>
+                <td>
+                  <a
+                    href="https://drive.google.com/file/d/1WLjDUHE_7SbXg_Q5rGymnUBKaiZg_yLq/view?usp=sharing"
+                  >
+                    Video 9
+                  </a>
+                </td>
+              </tr>
 
 
 
