--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h2>Machine Learning</h2>
           <p>
             Prof. Weiqing Gu<br />
-            Summer 2020
+            Spring 2022
           </p>
           <span> </span>
           <span> </span>
@@ -148,7 +148,7 @@
 
     <!-- Copyright -->
     <div id="copyright">
-      @Copyright 2020 Mathematical Methods of Machine Learning Summer 2020 All
+      @Copyright 2022 Mathematical Methods of Machine Learning Summer 2022 All
       Rights Reserved
     </div>
   </body>
