--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h2>Machine Learning</h2>
           <p>
             Prof. Weiqing Gu<br />
-            Summer 2020
+            Spring 2022
           </p>
           <span> </span>
           <span> </span>
