--- a/project.html
+++ b/project.html
@@ -227,7 +227,7 @@
 
     <!-- Copyright -->
     <div id="copyright">
-      @Copyright 2020 Mathematical Methods of Machine Learning Summer 2020 All
+      @Copyright 2022 Mathematical Methods of Machine Learning Spring 2022 All
       Rights Reserved
     </div>
   </body>
