--- a/schedule.html
+++ b/schedule.html
@@ -53,7 +53,7 @@
             <h2 align="center">Mathematical Methods of Machine Learning</h2>
             <span class="byline" align="center">
               Professor Weiqing Gu<br />
-              Summer 2020
+              Spring 2022
             </span>
           </header>
           <p>
