--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h2>Machine Learning</h2>
           <p>
             Prof. Weiqing Gu<br />
-            Summer 2020
+            Summer 2024
           </p>
           <span> </span>
           <span> </span>
@@ -72,17 +72,17 @@
         <p>
           In this course, we will study solving linear systems for regression,
           invertibility of matrices, Cholesky decomposition, ridge regression,
-          low rank matrix decomposition for topic modeling of text documents,
+          low-rank matrix decomposition for topic modeling of text documents,
           eigenvalues and eigenvectors for principle component analysis,
           singular value decomposition with applications to dimensionality
-          reduction in big data, inner products and Fourier transformations with
+          reduction in big data, inner products, and Fourier transformations with
           applications to audio data, Markov chains for time series prediction,
           networks, PageRank, convex functions, stochastic batch gradient
           descent for optimization, neural networks, linear transformations and
           activation functions in neural networks, CNNs, and softmax
           classification.<br /><br />
           You will learn how to read an academic paper with code samples from
-          GitHub, give a summary of the paper, and reproduce the results using
+          GitHub, give a summary of the paper and reproduce the results using
           the provided code.<br /><br />
           We will be using financial data in our examples to illustrate
           different principles and techniques. Since algorithmic trading is a
@@ -124,7 +124,7 @@
                 <p>
                   Be able to search and read recent academic papers in the
                   algorithmic trading literature and apply those algorithms and
-                  concepts to real world problems.
+                  concepts to real-world problems.
                 </p>
               </li>
             </ul>
@@ -135,7 +135,7 @@
               <li>
                 <span class="fa fa-leaf"></span>
                 <p>
-                  Become comfortable with industry and academia standard tools
+                  Become comfortable with industry and academic standard tools
                   (such as AWS and GitHub) and be able to find and work with
                   large, public datasets.
                 </p>
@@ -148,7 +148,7 @@
 
     <!-- Copyright -->
     <div id="copyright">
-      @Copyright 2020 Mathematical Methods of Machine Learning Summer 2020 All
+      @Copyright 2024 Mathematical Methods of Machine Learning Summer 2024 All
       Rights Reserved
     </div>
   </body>
