--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
             <h2 align="center">Mathematical Methods of Machine Learning</h2>
             <span class="byline" align="center">
               Professor Weiqing Gu<br />
-              Summer 2020
+              Summer 2024
             </span>
           </header>
 
@@ -62,7 +62,7 @@
           <h3>Description:</h3>
           <p>
             This is by far the largest component of the course. You will
-            discover, explore, and attack a real world problem of your choosing.
+            discover, explore, and attack a real-world problem of your choosing.
             There are <b> three </b> types of projects you can work on, shown
             below in order of increasing difficulty:
           </p>
@@ -79,14 +79,14 @@
             </li>
             <li>
               (3) Theoretical work. Create a new convergence bound on a learning
-              algorithm. Show that at some limit one learning algorithm becomes
+              algorithm. Show that at some limit, one learning algorithm becomes
               another. Etc.
             </li>
           </ul>
           <p>
-            These also have increasing risk. For example, you cannot turn in a
+            These also have increasing risks. For example, you cannot submit a
             paper saying you worked on a convergence bound for months with no
-            results. Option two has medium risk because part of the process of
+            results. Option two has a medium risk because part of the process of
             creating a new algorithm is creating baselines to improve upon. At
             <i>any</i> time during the course <i>please</i> feel free to come
             and discuss your problem and ask questions with the instructor or
@@ -102,17 +102,17 @@
             <li>
               &#9679; <b><i>Partner:</i></b> <br />
               Maximum of 1 partner (we may concede to 2 partners in extreme
-              scenarios eg. huge coding project). All partners must contribute
+              scenarios, e.g. huge coding project). All partners must contribute
               equally.
             </li>
             <li>
               &#9679; <b><i>Dataset:</i></b> <br />
-              You must use at least one dataset with at least one half million
+              You must use at least one dataset with at least one-half million
               data points as a significant part of your project.
             </li>
             <li>
               &#9679; <b><i>Format:</i></b> <br />
-              Your submission must be submitted as a pdf in
+              Your submission must be submitted as a PDF in
               <a
                 href="https://nips.cc/Conferences/2016/PaperInformation/AuthorSubmissionInstructions"
                 >NIPS format</a
@@ -122,8 +122,8 @@
                 >style file</a
               >. (NIPS, Neural Information Processing Systems, is one of the
               major machine learning conferences).<br />
-              If you do not know how to use LaTeX, we reccommend finding a
-              partner who does.
+              If you do not know how to use LaTeX, we recommend finding
+              a partner who does.
             </li>
             <li>
               &#9679; <b><i>Code Style:</i></b> <br />
@@ -134,7 +134,7 @@
               >
               and placed into a public GitHub repository under one of your
               partner's accounts. Place a footnote to this URL somewhere in your
-              final pdf. This is not required but it is recommended to place
+              final pdf. This is not required, but it is recommended to place
               your code under some
               <a href="http://choosealicense.com/">open-source license</a>
               such as <a href="http://choosealicense.com/licenses/mit/">MIT</a>.
@@ -148,30 +148,30 @@
               &#9679; <b><i>Jul 13: &nbsp;Project Proposal</i></b
               ><br />
               Students should select one particular direction that is
-              interesting to the team to do further investigation which may lead
-              to the final project. Typed (LaTeX) one page maximum explaining
+              interesting to the team to do further investigation, which may lead
+              to the final project. Typed (LaTeX) one-page maximum explaining
               your problem, what data sets you are likely to use (you must find
               some candidates), who your partners are, and what methods (of
               those you know of) you think you might use. Note that this is not
-              100% final but it should be within some epsilon of your final
+              100% final, but it should be within some epsilon of your final
               project.
             </li>
             <br />
             <li>
               &#9679; <b><i>Jul 23: &nbsp;Midterm Progress Report</i></b
               ><br />
-              Submit the progress report detailing your progress towards your
+              Submit the progress report detailing your progress toward your
               goal. Typed (LaTeX) summarizing your literature search, specifying
               what data sets you are using, and what methods you are applying.
-              The write-up should be 3 to 5 pages for a 1 person group, 6 to 8
-              pages for a 2 person group and 8 to 10 for a 3 person group.
+              The write-up should be 3 to 5 pages for a 1-person group, 6 to 8
+              pages for a 2-person group and 8 to 10 for a 3-person group.
             </li>
             <br />
             <li>
               &#9679;
               <b><i>Aug 8: &nbsp; Draft of Final Project Report</i></b>
               <br />
-              Typed (LaTeX) draft of final report and all of the codes written
+              Typed (LaTeX) draft of the final report and all of the codes written
               need to be submitted. The draft needs to detail the progress of
               the final project, which is expected to be a significant amount.
               The draft is used to demonstrate what you have done so far and
@@ -185,7 +185,7 @@
             <br />
             <li>
               &#9679; <b><i>Aug 14: Final Project Presentation</i></b> <br />
-              Presentation should as detailed as possible, and it should be
+              Presentation should be as detailed as possible, and it should be
               about 10 minutes to half an hour long. 10-12 minute presentation
               (plus 3 minutes for questions)
             </li>
@@ -203,8 +203,8 @@
                 </li>
                 <li>
                   (3) The Latex final report following NIPS format (4 to 6 pages
-                  for a 1 person group, 10 to 12 pages for a 2 person group and
-                  12 to 16 for a 3 person group);
+                  for a 1-person group, 10 to 12 pages for a 2-person group, and
+                  12 to 16 for a 3-person group);
                 </li>
                 <li>
                   (4) All .tex files with figures, references etc. that generate
