--- a/resources.html
+++ b/resources.html
@@ -53,7 +53,7 @@
             <h2 align="center">Mathematical Methods of Machine Learning</h2>
             <span class="byline" align="center">
               Professor Weiqing Gu<br />
-              Summer 2020
+              Summer 2024
             </span>
           </header>
         </section>
@@ -71,7 +71,7 @@
               href="https://github.com/aiml-73/resources/blob/master/homework/pset.cls"
               >pset.cls</a
             >
-            and put them and the hw tex file under same folder.<br />
+            and put them and the hw tex file under the same folder.<br />
             If you have any questions with regard to the compilation of the tex
             files, feel free to ask the TA for help.
           </p>
@@ -120,7 +120,7 @@
 
               <tr>
                 <td>
-                  July 22
+                  TBD
                 </td>
                 <td>
                   <a
@@ -177,7 +177,7 @@
               </tr>
 
               <tr>
-                <td>July 10</td>
+                <td>TBD</td>
                 <td>
                   <a
                     href="https://drive.google.com/file/d/1AFhubyiy_CRc5-kT33oSh9INcQgTYyDA/view?usp=sharing"
@@ -195,7 +195,7 @@
               </tr>
 
               <tr>
-                <td>July 15</td>
+                <td>TBD</td>
                 <td>
                   <a
                     href="https://drive.google.com/file/d/1dXI22ROskuwVplMbSdIIV7jijKgD8aYd/view?usp=sharing"
@@ -213,7 +213,7 @@
               </tr>
 
               <tr>
-                <td>July 17</td>
+                <td>TBD</td>
                 <td>
                   <a
                     href="https://drive.google.com/file/d/1dx37N4Mfz34yfT02r7Y02_xANliPhQjI/view?usp=sharing"
@@ -231,7 +231,7 @@
               </tr>
 
               <tr>
-                <td>July 22</td>
+                <td>TBD</td>
                 <td>
                   <a
                     href="https://github.com/athaker/econ_136/blob/master/intro_quant_2020.pdf"
@@ -249,7 +249,7 @@
               </tr>
 
               <tr>
-                <td>July 24</td>
+                <td>TBD</td>
                 <td>
                   <a
                     href="https://drive.google.com/file/d/1ydGRWYgiE7bXyXccYz2nvvmrIuodQWy7/view?usp=sharing"
@@ -267,7 +267,7 @@
               </tr>
 
               <tr>
-                <td>July 29</td>
+                <td>TBD</td>
                 <td>
                   <a
                     href="https://drive.google.com/file/d/1jEz4vfzr4CnIlKxY-6hSUuWINbkK0h79/view?usp=sharing"
@@ -290,7 +290,7 @@
 
 
               <tr>
-                <td>July 24</td>
+                <td>TBD</td>
                 <td>
                   <a
                     href="https://drive.google.com/file/d/1I7lDEbkZRr145Ayxt9FBUyLE3s-4CcAs/view?usp=sharing"
@@ -337,7 +337,7 @@
 
     <!-- Copyright -->
     <div id="copyright">
-      @Copyright 2020 Mathematical Methods of Machine Learning Summer 2020 All
+      @Copyright 2024 Mathematical Methods of Machine Learning Summer 2024 All
       Rights Reserved
     </div>
   </body>
